--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Get Started</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
+						<a href="#about" class="icon solid fa-info"><span>About</span></a>
 						<a href="https://github.com/ashishjayamohan/Tread" class="icon brands fa-github"><span>GitHub</span></a>
 					</nav>
 					<div id="main">
@@ -28,10 +29,10 @@
 							</article>
 							<article id="work" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>Get Started</h2>
 								</header>
 								<p>
-									Getting started with Tread is a breeze with all well-documented and easy-to-read code. Start off by looking at the <a href="https://github.com/ashishjayamohan/Tread">GitHub repository</a>. If you have any questions, feel free to contact me. Thank you for using Tread!
+									Getting started with Tread is a breeze with all well-documented and easy-to-read code. Start off by looking at the <a href="https://github.com/ashishjayamohan/Tread">GitHub repository</a>. Still got questions? Contact me.
 								</p>
 							</article>
 							<article id="contact" class="panel">
@@ -40,10 +41,16 @@
 								</header>
 								<p>Email: <a href="mailto:ashishjayamohan@gmail.com">ashishjayamohan@gmail.com</a></p>
 							</article>
+							<article id="about" class="panel">
+								<header>
+									<h2>About</h2>
+								</header>
+								<p>Nothing here for right now...</p>
+							</article>
 					</div>
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Tread</li>
+							<li>&copy; Tread | Ashish Jayamohan</li>
 						</ul>
 					</div>
 			</div>
