--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<header>
 									<h2>About</h2>
 								</header>
-								<p>Nothing here for right now...</p>
+								<p>Simply said, we are non-data-scientists.</p>
 							</article>
 					</div>
 					<div id="footer">
