--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>Get Started</span></span>
-									<img src="images/logo_inkscape.svg" alt=""/>
+									<img src="images/mini_logo.svg" alt=""/>
 								</a>
 							</article>
 							<article id="work" class="panel">
